header: fixing button alignment in right corner

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,9 @@
 a {
     text-decoration: none;
     font-size: 1rem;
-    color: white
+    color: white;
+    line-height: 20px;
+    vertical-align: middle;
 }
 h5 {
     color: var(--cs-blue);
@@ -111,12 +113,13 @@ a.btn {
 /** MAIN */
 /* Header */
 header {
-    min-height: 100px;
+    /* min-height: 100px; */
     position: sticky;
     z-index: 1;
     top: 0;
     left: 0;
     right:0;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
 }
 .box-drop {
     display: flex;
@@ -298,5 +301,6 @@ a.cs-btn:hover {
         left: -4px;
         right: -4px;
         border: none;
+        box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
     }
 }
